app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
  --background: oklch(0.9911 0 0);
  --foreground: oklch(0.2178 0 0);
  --card: oklch(1.0000 0 0);
  --card-foreground: oklch(0.2178 0 0);
  --popover: oklch(1.0000 0 0);
  --popover-foreground: oklch(0.2178 0 0);
  --primary: oklch(0.5850 0.2350 264.1);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(0.9683 0.0069 247.8956);
  --secondary-foreground: oklch(0.2795 0.0368 260.0310);
  --muted: oklch(0.9842 0.0034 247.8575);
  --muted-foreground: oklch(0.5544 0.0407 257.4166);
  --accent: oklch(0.9500 0.0300 264.1);
  --accent-foreground: oklch(0.5850 0.2350 264.1);
  --destructive: oklch(0.6368 0.2078 25.3313);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.9288 0.0126 255.5078);
  --input: oklch(0.9288 0.0126 255.5078);
  --ring: oklch(0.6400 0.2100 264.1);
  --chart-1: oklch(0.5461 0.2152 262.8809);
  --chart-2: oklch(0.5413 0.2466 293.0090);
  --chart-3: oklch(0.5916 0.2180 0.5844);
  --chart-4: oklch(0.6461 0.1943 41.1158);
  --chart-5: oklch(0.6806 0.1423 75.8340);
  --sidebar: oklch(1.0000 0 0);
  --sidebar-foreground: oklch(0.3717 0.0392 257.2870);
  --sidebar-primary: oklch(0.5850 0.2350 264.1);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.9683 0.0069 247.8956);
  --sidebar-accent-foreground: oklch(0.2077 0.0398 265.7549);
  --sidebar-border: oklch(0.9288 0.0126 255.5078);
  --sidebar-ring: oklch(0.6400 0.2100 264.1);
  --font-sans: Inter, system-ui, sans-serif;
  --font-serif: Georgia, serif;
  --font-mono: Monaco, monospace;
  --radius: 0.75rem;
  --shadow-x: 0px;
  --shadow-y: 4px;
  --shadow-blur: 10px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.1;
  --shadow-color: 0 0 0;
  --shadow-2xs: 0px 4px 10px 0px hsl(0 0 0 / 0.05);
  --shadow-xs: 0px 4px 10px 0px hsl(0 0 0 / 0.05);
  --shadow-sm: 0px 4px 10px 0px hsl(0 0 0 / 0.10), 0px 1px 2px -1px hsl(0 0 0 / 0.10);
  --shadow: 0px 4px 10px 0px hsl(0 0 0 / 0.10), 0px 1px 2px -1px hsl(0 0 0 / 0.10);
  --shadow-md: 0px 4px 10px 0px hsl(0 0 0 / 0.10), 0px 2px 4px -1px hsl(0 0 0 / 0.10);
  --shadow-lg: 0px 4px 10px 0px hsl(0 0 0 / 0.10), 0px 4px 6px -1px hsl(0 0 0 / 0.10);
  --shadow-xl: 0px 4px 10px 0px hsl(0 0 0 / 0.10), 0px 8px 10px -1px hsl(0 0 0 / 0.10);
  --shadow-2xl: 0px 4px 10px 0px hsl(0 0 0 / 0.25);
  --tracking-normal: 0.01em;
  --spacing: 0.25rem;
}

.dark {
  --background: oklch(0.1457 0.0043 285.8570);
  --foreground: oklch(0.9842 0.0034 247.8575);
  --card: oklch(0.1790 0.0061 285.7665);
  --card-foreground: oklch(0.9842 0.0034 247.8575);
  --popover: oklch(0.1790 0.0061 285.7665);
  --popover-foreground: oklch(0.9842 0.0034 247.8575);
  --primary: oklch(0.6400 0.2100 264.1);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(0.2795 0.0368 260.0310);
  --secondary-foreground: oklch(0.9842 0.0034 247.8575);
  --muted: oklch(0.2376 0.0114 285.4997);
  --muted-foreground: oklch(0.7107 0.0351 256.7878);
  --accent: oklch(0.5850 0.2350 264.1);
  --accent-foreground: oklch(1.0000 0 0);
  --destructive: oklch(0.3958 0.1331 25.7230);
  --destructive-foreground: oklch(0.9842 0.0034 247.8575);
  --border: oklch(0.2739 0.0055 286.0326);
  --input: oklch(0.2739 0.0055 286.0326);
  --ring: oklch(0.6700 0.1900 264.1);
  --chart-1: oklch(0.6400 0.2100 264.1);
  --chart-2: oklch(0.6056 0.2189 292.7172);
  --chart-3: oklch(0.6559 0.2118 354.3084);
  --chart-4: oklch(0.7049 0.1867 47.6044);
  --chart-5: oklch(0.7952 0.1617 86.0468);
  --sidebar: oklch(0.1605 0.0063 285.6705);
  --sidebar-foreground: oklch(0.9683 0.0069 247.8956);
  --sidebar-primary: oklch(0.6400 0.2100 264.1);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.2795 0.0368 260.0310);
  --sidebar-accent-foreground: oklch(0.9683 0.0069 247.8956);
  --sidebar-border: oklch(0.2739 0.0055 286.0326);
  --sidebar-ring: oklch(0.6700 0.1900 264.1);
  --font-sans: Inter, system-ui, sans-serif;
  --font-serif: Georgia, serif;
  --font-mono: Monaco, monospace;
  --radius: 1rem;
  --shadow-x: 0px;
  --shadow-y: 10px;
  --shadow-blur: 20px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.5;
  --shadow-color: 0 0 0;
  --shadow-2xs: 0px 10px 20px 0px hsl(0 0 0 / 0.25);
  --shadow-xs: 0px 10px 20px 0px hsl(0 0 0 / 0.25);
  --shadow-sm: 0px 10px 20px 0px hsl(0 0 0 / 0.50), 0px 1px 2px -1px hsl(0 0 0 / 0.50);
  --shadow: 0px 10px 20px 0px hsl(0 0 0 / 0.50), 0px 1px 2px -1px hsl(0 0 0 / 0.50);
  --shadow-md: 0px 10px 20px 0px hsl(0 0 0 / 0.50), 0px 2px 4px -1px hsl(0 0 0 / 0.50);
  --shadow-lg: 0px 10px 20px 0px hsl(0 0 0 / 0.50), 0px 4px 6px -1px hsl(0 0 0 / 0.50);
  --shadow-xl: 0px 10px 20px 0px hsl(0 0 0 / 0.50), 0px 8px 10px -1px hsl(0 0 0 / 0.50);
  --shadow-2xl: 0px 10px 20px 0px hsl(0 0 0 / 1.25);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
    letter-spacing: var(--tracking-normal);
  }
}

